--- a/exchangerates.html
+++ b/exchangerates.html
@@ -3,7 +3,6 @@
 </head>
 <body>
   
-  <!-- START CODE Attention! Do not modify this code; --><script>var fm = "TND";var to = "EUR,USD";var tz = "1";var sz = "1x164";var lg = "en";var st = "default";var cd = 1;var am = 1</script><script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div><!-- Attention! Do not modify this code; END CODE -->
-  
+    <!-- START CODE Attention! Do not modify this code; --><script>var fm = "EUR";var to = "TND";var tz = "1";var sz = "1x127";var lg = "en";var st = "default";var cd = 1;var am = 1</script><script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div><!-- Attention! Do not modify this code; END CODE --> 
 </body>
 </html>
